syntaxique.output
Terminals unused in grammar

   STRING
   POINT_VIRGULE
   VIRGULE
   POINT
   DOUBLE_SHARP


Grammaire

    0 $accept: program $end

    1 program: DEBUT declarations EXECUTION block FIN

    2 declarations: /* vide */
    3             | declarations declaration

    4 declaration: type DEUX_POINTS ID
    5            | type DEUX_POINTS ID CROCHET_OUVRANT CST CROCHET_FERMANT
    6            | FIXE type DEUX_POINTS ID ASSIGNATION CST

    7 type: NUM
    8     | REAL
    9     | TEXT

   10 block: ACCOLADE_OUVRANTE instructions ACCOLADE_FERMANTE

   11 instructions: /* vide */
   12             | instruction instructions

   13 instruction: COMMENT_SINGLE
   14            | COMMENT_MULTI
   15            | affectation
   16            | assignation
   17            | instSI
   18            | instTantQue
   19            | affiche
   20            | lire

   21 assignation: ID ASSIGNATION expression

   22 affectation: ID AFFECTATION expression
   23            | ID CROCHET_OUVRANT expression CROCHET_FERMANT AFFECTATION expression

   24 variables: CST
   25          | ID

   26 expression: arithmetique
   27           | logique

   28 arithmetique: variables
   29             | arithmetique PLUS arithmetique
   30             | arithmetique MOINS arithmetique
   31             | arithmetique MUL arithmetique
   32             | arithmetique DIV arithmetique
   33             | PARENTHESE_OUVRANTE arithmetique PARENTHESE_FERMANTE

   34 logique: comparaison
   35        | logique ET_LOGIQUE logique
   36        | logique OU_LOGIQUE logique
   37        | NEGATION logique
   38        | PARENTHESE_OUVRANTE logique PARENTHESE_FERMANTE

   39 comparaison: arithmetique comparaison_operateurs arithmetique

   40 comparaison_operateurs: EGAL
   41                       | DIFFERENT
   42                       | SUPERIEUR
   43                       | SUP_EGAL
   44                       | INFERIEUR
   45                       | INF_EGAL

   46 instSI: SI PARENTHESE_OUVRANTE logique PARENTHESE_FERMANTE ALORS block SINON block
   47       | SI PARENTHESE_OUVRANTE logique PARENTHESE_FERMANTE ALORS block

   48 instTantQue: TANTQUE PARENTHESE_OUVRANTE logique PARENTHESE_FERMANTE FAIRE block

   49 affiche: AFFICHE PARENTHESE_OUVRANTE GUILLEMENT expression GUILLEMENT PARENTHESE_FERMANTE
   50        | AFFICHE PARENTHESE_OUVRANTE GUILLEMENT expression GUILLEMENT PLUS ID PARENTHESE_FERMANTE

   51 lire: LIRE PARENTHESE_OUVRANTE variables PARENTHESE_FERMANTE


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
DEBUT (258) 1
EXECUTION (259) 1
FIN (260) 1
NUM (261) 7
REAL (262) 8
SI (263) 46 47
ALORS (264) 46 47
TEXT (265) 9
SINON (266) 46
TANTQUE (267) 48
FAIRE (268) 48
ID (269) 4 5 6 21 22 23 25 50
CST (270) 5 6 24
STRING (271)
ET_LOGIQUE (272) 35
OU_LOGIQUE (273) 36
NEGATION (274) 37
FIXE (275) 6
AFFICHE (276) 49 50
LIRE (277) 51
EGAL (278) 40
DIFFERENT (279) 41
ASSIGNATION (280) 6 21
SUPERIEUR (281) 42
SUP_EGAL (282) 43
INFERIEUR (283) 44
INF_EGAL (284) 45
AFFECTATION (285) 22 23
PLUS (286) 29 50
MOINS (287) 30
MUL (288) 31
DIV (289) 32
POINT_VIRGULE (290)
DEUX_POINTS (291) 4 5 6
VIRGULE (292)
POINT (293)
PARENTHESE_OUVRANTE (294) 33 38 46 47 48 49 50 51
PARENTHESE_FERMANTE (295) 33 38 46 47 48 49 50 51
CROCHET_OUVRANT (296) 5 23
CROCHET_FERMANT (297) 5 23
ACCOLADE_OUVRANTE (298) 10
ACCOLADE_FERMANTE (299) 10
GUILLEMENT (300) 49 50
DOUBLE_SHARP (301)
COMMENT_SINGLE (302) 13
COMMENT_MULTI (303) 14


Non-terminaux, suivis des règles où ils apparaissent

$accept (49)
    à gauche: 0
program (50)
    à gauche: 1, à droite: 0
declarations (51)
    à gauche: 2 3, à droite: 1 3
declaration (52)
    à gauche: 4 5 6, à droite: 3
type (53)
    à gauche: 7 8 9, à droite: 4 5 6
block (54)
    à gauche: 10, à droite: 1 46 47 48
instructions (55)
    à gauche: 11 12, à droite: 10 12
instruction (56)
    à gauche: 13 14 15 16 17 18 19 20, à droite: 12
assignation (57)
    à gauche: 21, à droite: 16
affectation (58)
    à gauche: 22 23, à droite: 15
variables (59)
    à gauche: 24 25, à droite: 28 51
expression (60)
    à gauche: 26 27, à droite: 21 22 23 49 50
arithmetique (61)
    à gauche: 28 29 30 31 32 33, à droite: 26 29 30 31 32 33 39
logique (62)
    à gauche: 34 35 36 37 38, à droite: 27 35 36 37 38 46 47 48
comparaison (63)
    à gauche: 39, à droite: 34
comparaison_operateurs (64)
    à gauche: 40 41 42 43 44 45, à droite: 39
instSI (65)
    à gauche: 46 47, à droite: 17
instTantQue (66)
    à gauche: 48, à droite: 18
affiche (67)
    à gauche: 49 50, à droite: 19
lire (68)
    à gauche: 51, à droite: 20


état 0

    0 $accept: . program $end

    DEBUT  décalage et aller à l'état 1

    program  aller à l'état 2


état 1

    1 program: DEBUT . declarations EXECUTION block FIN

    $défaut  réduction par utilisation de la règle 2 (declarations)

    declarations  aller à l'état 3


état 2

    0 $accept: program . $end

    $end  décalage et aller à l'état 4


état 3

    1 program: DEBUT declarations . EXECUTION block FIN
    3 declarations: declarations . declaration

    EXECUTION  décalage et aller à l'état 5
    NUM        décalage et aller à l'état 6
    REAL       décalage et aller à l'état 7
    TEXT       décalage et aller à l'état 8
    FIXE       décalage et aller à l'état 9

    declaration  aller à l'état 10
    type         aller à l'état 11


état 4

    0 $accept: program $end .

    $défaut  accepter


état 5

    1 program: DEBUT declarations EXECUTION . block FIN

    ACCOLADE_OUVRANTE  décalage et aller à l'état 12

    block  aller à l'état 13


état 6

    7 type: NUM .

    $défaut  réduction par utilisation de la règle 7 (type)


état 7

    8 type: REAL .

    $défaut  réduction par utilisation de la règle 8 (type)


état 8

    9 type: TEXT .

    $défaut  réduction par utilisation de la règle 9 (type)


état 9

    6 declaration: FIXE . type DEUX_POINTS ID ASSIGNATION CST

    NUM   décalage et aller à l'état 6
    REAL  décalage et aller à l'état 7
    TEXT  décalage et aller à l'état 8

    type  aller à l'état 14


état 10

    3 declarations: declarations declaration .

    $défaut  réduction par utilisation de la règle 3 (declarations)


état 11

    4 declaration: type . DEUX_POINTS ID
    5            | type . DEUX_POINTS ID CROCHET_OUVRANT CST CROCHET_FERMANT

    DEUX_POINTS  décalage et aller à l'état 15


état 12

   10 block: ACCOLADE_OUVRANTE . instructions ACCOLADE_FERMANTE

    SI              décalage et aller à l'état 16
    TANTQUE         décalage et aller à l'état 17
    ID              décalage et aller à l'état 18
    AFFICHE         décalage et aller à l'état 19
    LIRE            décalage et aller à l'état 20
    COMMENT_SINGLE  décalage et aller à l'état 21
    COMMENT_MULTI   décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 11 (instructions)

    instructions  aller à l'état 23
    instruction   aller à l'état 24
    assignation   aller à l'état 25
    affectation   aller à l'état 26
    instSI        aller à l'état 27
    instTantQue   aller à l'état 28
    affiche       aller à l'état 29
    lire          aller à l'état 30


état 13

    1 program: DEBUT declarations EXECUTION block . FIN

    FIN  décalage et aller à l'état 31


état 14

    6 declaration: FIXE type . DEUX_POINTS ID ASSIGNATION CST

    DEUX_POINTS  décalage et aller à l'état 32


état 15

    4 declaration: type DEUX_POINTS . ID
    5            | type DEUX_POINTS . ID CROCHET_OUVRANT CST CROCHET_FERMANT

    ID  décalage et aller à l'état 33


état 16

   46 instSI: SI . PARENTHESE_OUVRANTE logique PARENTHESE_FERMANTE ALORS block SINON block
   47       | SI . PARENTHESE_OUVRANTE logique PARENTHESE_FERMANTE ALORS block

    PARENTHESE_OUVRANTE  décalage et aller à l'état 34


état 17

   48 instTantQue: TANTQUE . PARENTHESE_OUVRANTE logique PARENTHESE_FERMANTE FAIRE block

    PARENTHESE_OUVRANTE  décalage et aller à l'état 35


état 18

   21 assignation: ID . ASSIGNATION expression
   22 affectation: ID . AFFECTATION expression
   23            | ID . CROCHET_OUVRANT expression CROCHET_FERMANT AFFECTATION expression

    ASSIGNATION      décalage et aller à l'état 36
    AFFECTATION      décalage et aller à l'état 37
    CROCHET_OUVRANT  décalage et aller à l'état 38


état 19

   49 affiche: AFFICHE . PARENTHESE_OUVRANTE GUILLEMENT expression GUILLEMENT PARENTHESE_FERMANTE
   50        | AFFICHE . PARENTHESE_OUVRANTE GUILLEMENT expression GUILLEMENT PLUS ID PARENTHESE_FERMANTE

    PARENTHESE_OUVRANTE  décalage et aller à l'état 39


état 20

   51 lire: LIRE . PARENTHESE_OUVRANTE variables PARENTHESE_FERMANTE

    PARENTHESE_OUVRANTE  décalage et aller à l'état 40


état 21

   13 instruction: COMMENT_SINGLE .

    $défaut  réduction par utilisation de la règle 13 (instruction)


état 22

   14 instruction: COMMENT_MULTI .

    $défaut  réduction par utilisation de la règle 14 (instruction)


état 23

   10 block: ACCOLADE_OUVRANTE instructions . ACCOLADE_FERMANTE

    ACCOLADE_FERMANTE  décalage et aller à l'état 41


état 24

   12 instructions: instruction . instructions

    SI              décalage et aller à l'état 16
    TANTQUE         décalage et aller à l'état 17
    ID              décalage et aller à l'état 18
    AFFICHE         décalage et aller à l'état 19
    LIRE            décalage et aller à l'état 20
    COMMENT_SINGLE  décalage et aller à l'état 21
    COMMENT_MULTI   décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 11 (instructions)

    instructions  aller à l'état 42
    instruction   aller à l'état 24
    assignation   aller à l'état 25
    affectation   aller à l'état 26
    instSI        aller à l'état 27
    instTantQue   aller à l'état 28
    affiche       aller à l'état 29
    lire          aller à l'état 30


état 25

   16 instruction: assignation .

    $défaut  réduction par utilisation de la règle 16 (instruction)


état 26

   15 instruction: affectation .

    $défaut  réduction par utilisation de la règle 15 (instruction)


état 27

   17 instruction: instSI .

    $défaut  réduction par utilisation de la règle 17 (instruction)


état 28

   18 instruction: instTantQue .

    $défaut  réduction par utilisation de la règle 18 (instruction)


état 29

   19 instruction: affiche .

    $défaut  réduction par utilisation de la règle 19 (instruction)


état 30

   20 instruction: lire .

    $défaut  réduction par utilisation de la règle 20 (instruction)


état 31

    1 program: DEBUT declarations EXECUTION block FIN .

    $défaut  réduction par utilisation de la règle 1 (program)


état 32

    6 declaration: FIXE type DEUX_POINTS . ID ASSIGNATION CST

    ID  décalage et aller à l'état 43


état 33

    4 declaration: type DEUX_POINTS ID .
    5            | type DEUX_POINTS ID . CROCHET_OUVRANT CST CROCHET_FERMANT

    CROCHET_OUVRANT  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 4 (declaration)


état 34

   46 instSI: SI PARENTHESE_OUVRANTE . logique PARENTHESE_FERMANTE ALORS block SINON block
   47       | SI PARENTHESE_OUVRANTE . logique PARENTHESE_FERMANTE ALORS block

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    NEGATION             décalage et aller à l'état 47
    PARENTHESE_OUVRANTE  décalage et aller à l'état 48

    variables     aller à l'état 49
    arithmetique  aller à l'état 50
    logique       aller à l'état 51
    comparaison   aller à l'état 52


état 35

   48 instTantQue: TANTQUE PARENTHESE_OUVRANTE . logique PARENTHESE_FERMANTE FAIRE block

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    NEGATION             décalage et aller à l'état 47
    PARENTHESE_OUVRANTE  décalage et aller à l'état 48

    variables     aller à l'état 49
    arithmetique  aller à l'état 50
    logique       aller à l'état 53
    comparaison   aller à l'état 52


état 36

   21 assignation: ID ASSIGNATION . expression

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    NEGATION             décalage et aller à l'état 47
    PARENTHESE_OUVRANTE  décalage et aller à l'état 48

    variables     aller à l'état 49
    expression    aller à l'état 54
    arithmetique  aller à l'état 55
    logique       aller à l'état 56
    comparaison   aller à l'état 52


état 37

   22 affectation: ID AFFECTATION . expression

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    NEGATION             décalage et aller à l'état 47
    PARENTHESE_OUVRANTE  décalage et aller à l'état 48

    variables     aller à l'état 49
    expression    aller à l'état 57
    arithmetique  aller à l'état 55
    logique       aller à l'état 56
    comparaison   aller à l'état 52


état 38

   23 affectation: ID CROCHET_OUVRANT . expression CROCHET_FERMANT AFFECTATION expression

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    NEGATION             décalage et aller à l'état 47
    PARENTHESE_OUVRANTE  décalage et aller à l'état 48

    variables     aller à l'état 49
    expression    aller à l'état 58
    arithmetique  aller à l'état 55
    logique       aller à l'état 56
    comparaison   aller à l'état 52


état 39

   49 affiche: AFFICHE PARENTHESE_OUVRANTE . GUILLEMENT expression GUILLEMENT PARENTHESE_FERMANTE
   50        | AFFICHE PARENTHESE_OUVRANTE . GUILLEMENT expression GUILLEMENT PLUS ID PARENTHESE_FERMANTE

    GUILLEMENT  décalage et aller à l'état 59


état 40

   51 lire: LIRE PARENTHESE_OUVRANTE . variables PARENTHESE_FERMANTE

    ID   décalage et aller à l'état 45
    CST  décalage et aller à l'état 46

    variables  aller à l'état 60


état 41

   10 block: ACCOLADE_OUVRANTE instructions ACCOLADE_FERMANTE .

    $défaut  réduction par utilisation de la règle 10 (block)


état 42

   12 instructions: instruction instructions .

    $défaut  réduction par utilisation de la règle 12 (instructions)


état 43

    6 declaration: FIXE type DEUX_POINTS ID . ASSIGNATION CST

    ASSIGNATION  décalage et aller à l'état 61


état 44

    5 declaration: type DEUX_POINTS ID CROCHET_OUVRANT . CST CROCHET_FERMANT

    CST  décalage et aller à l'état 62


état 45

   25 variables: ID .

    $défaut  réduction par utilisation de la règle 25 (variables)


état 46

   24 variables: CST .

    $défaut  réduction par utilisation de la règle 24 (variables)


état 47

   37 logique: NEGATION . logique

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    NEGATION             décalage et aller à l'état 47
    PARENTHESE_OUVRANTE  décalage et aller à l'état 48

    variables     aller à l'état 49
    arithmetique  aller à l'état 50
    logique       aller à l'état 63
    comparaison   aller à l'état 52


état 48

   33 arithmetique: PARENTHESE_OUVRANTE . arithmetique PARENTHESE_FERMANTE
   38 logique: PARENTHESE_OUVRANTE . logique PARENTHESE_FERMANTE

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    NEGATION             décalage et aller à l'état 47
    PARENTHESE_OUVRANTE  décalage et aller à l'état 48

    variables     aller à l'état 49
    arithmetique  aller à l'état 64
    logique       aller à l'état 65
    comparaison   aller à l'état 52


état 49

   28 arithmetique: variables .

    $défaut  réduction par utilisation de la règle 28 (arithmetique)


état 50

   29 arithmetique: arithmetique . PLUS arithmetique
   30             | arithmetique . MOINS arithmetique
   31             | arithmetique . MUL arithmetique
   32             | arithmetique . DIV arithmetique
   39 comparaison: arithmetique . comparaison_operateurs arithmetique

    EGAL       décalage et aller à l'état 66
    DIFFERENT  décalage et aller à l'état 67
    SUPERIEUR  décalage et aller à l'état 68
    SUP_EGAL   décalage et aller à l'état 69
    INFERIEUR  décalage et aller à l'état 70
    INF_EGAL   décalage et aller à l'état 71
    PLUS       décalage et aller à l'état 72
    MOINS      décalage et aller à l'état 73
    MUL        décalage et aller à l'état 74
    DIV        décalage et aller à l'état 75

    comparaison_operateurs  aller à l'état 76


état 51

   35 logique: logique . ET_LOGIQUE logique
   36        | logique . OU_LOGIQUE logique
   46 instSI: SI PARENTHESE_OUVRANTE logique . PARENTHESE_FERMANTE ALORS block SINON block
   47       | SI PARENTHESE_OUVRANTE logique . PARENTHESE_FERMANTE ALORS block

    ET_LOGIQUE           décalage et aller à l'état 77
    OU_LOGIQUE           décalage et aller à l'état 78
    PARENTHESE_FERMANTE  décalage et aller à l'état 79


état 52

   34 logique: comparaison .

    $défaut  réduction par utilisation de la règle 34 (logique)


état 53

   35 logique: logique . ET_LOGIQUE logique
   36        | logique . OU_LOGIQUE logique
   48 instTantQue: TANTQUE PARENTHESE_OUVRANTE logique . PARENTHESE_FERMANTE FAIRE block

    ET_LOGIQUE           décalage et aller à l'état 77
    OU_LOGIQUE           décalage et aller à l'état 78
    PARENTHESE_FERMANTE  décalage et aller à l'état 80


état 54

   21 assignation: ID ASSIGNATION expression .

    $défaut  réduction par utilisation de la règle 21 (assignation)


état 55

   26 expression: arithmetique .
   29 arithmetique: arithmetique . PLUS arithmetique
   30             | arithmetique . MOINS arithmetique
   31             | arithmetique . MUL arithmetique
   32             | arithmetique . DIV arithmetique
   39 comparaison: arithmetique . comparaison_operateurs arithmetique

    EGAL       décalage et aller à l'état 66
    DIFFERENT  décalage et aller à l'état 67
    SUPERIEUR  décalage et aller à l'état 68
    SUP_EGAL   décalage et aller à l'état 69
    INFERIEUR  décalage et aller à l'état 70
    INF_EGAL   décalage et aller à l'état 71
    PLUS       décalage et aller à l'état 72
    MOINS      décalage et aller à l'état 73
    MUL        décalage et aller à l'état 74
    DIV        décalage et aller à l'état 75

    $défaut  réduction par utilisation de la règle 26 (expression)

    comparaison_operateurs  aller à l'état 76


état 56

   27 expression: logique .
   35 logique: logique . ET_LOGIQUE logique
   36        | logique . OU_LOGIQUE logique

    ET_LOGIQUE  décalage et aller à l'état 77
    OU_LOGIQUE  décalage et aller à l'état 78

    $défaut  réduction par utilisation de la règle 27 (expression)


état 57

   22 affectation: ID AFFECTATION expression .

    $défaut  réduction par utilisation de la règle 22 (affectation)


état 58

   23 affectation: ID CROCHET_OUVRANT expression . CROCHET_FERMANT AFFECTATION expression

    CROCHET_FERMANT  décalage et aller à l'état 81


état 59

   49 affiche: AFFICHE PARENTHESE_OUVRANTE GUILLEMENT . expression GUILLEMENT PARENTHESE_FERMANTE
   50        | AFFICHE PARENTHESE_OUVRANTE GUILLEMENT . expression GUILLEMENT PLUS ID PARENTHESE_FERMANTE

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    NEGATION             décalage et aller à l'état 47
    PARENTHESE_OUVRANTE  décalage et aller à l'état 48

    variables     aller à l'état 49
    expression    aller à l'état 82
    arithmetique  aller à l'état 55
    logique       aller à l'état 56
    comparaison   aller à l'état 52


état 60

   51 lire: LIRE PARENTHESE_OUVRANTE variables . PARENTHESE_FERMANTE

    PARENTHESE_FERMANTE  décalage et aller à l'état 83


état 61

    6 declaration: FIXE type DEUX_POINTS ID ASSIGNATION . CST

    CST  décalage et aller à l'état 84


état 62

    5 declaration: type DEUX_POINTS ID CROCHET_OUVRANT CST . CROCHET_FERMANT

    CROCHET_FERMANT  décalage et aller à l'état 85


état 63

   35 logique: logique . ET_LOGIQUE logique
   36        | logique . OU_LOGIQUE logique
   37        | NEGATION logique .

    $défaut  réduction par utilisation de la règle 37 (logique)


état 64

   29 arithmetique: arithmetique . PLUS arithmetique
   30             | arithmetique . MOINS arithmetique
   31             | arithmetique . MUL arithmetique
   32             | arithmetique . DIV arithmetique
   33             | PARENTHESE_OUVRANTE arithmetique . PARENTHESE_FERMANTE
   39 comparaison: arithmetique . comparaison_operateurs arithmetique

    EGAL                 décalage et aller à l'état 66
    DIFFERENT            décalage et aller à l'état 67
    SUPERIEUR            décalage et aller à l'état 68
    SUP_EGAL             décalage et aller à l'état 69
    INFERIEUR            décalage et aller à l'état 70
    INF_EGAL             décalage et aller à l'état 71
    PLUS                 décalage et aller à l'état 72
    MOINS                décalage et aller à l'état 73
    MUL                  décalage et aller à l'état 74
    DIV                  décalage et aller à l'état 75
    PARENTHESE_FERMANTE  décalage et aller à l'état 86

    comparaison_operateurs  aller à l'état 76


état 65

   35 logique: logique . ET_LOGIQUE logique
   36        | logique . OU_LOGIQUE logique
   38        | PARENTHESE_OUVRANTE logique . PARENTHESE_FERMANTE

    ET_LOGIQUE           décalage et aller à l'état 77
    OU_LOGIQUE           décalage et aller à l'état 78
    PARENTHESE_FERMANTE  décalage et aller à l'état 87


état 66

   40 comparaison_operateurs: EGAL .

    $défaut  réduction par utilisation de la règle 40 (comparaison_operateurs)


état 67

   41 comparaison_operateurs: DIFFERENT .

    $défaut  réduction par utilisation de la règle 41 (comparaison_operateurs)


état 68

   42 comparaison_operateurs: SUPERIEUR .

    $défaut  réduction par utilisation de la règle 42 (comparaison_operateurs)


état 69

   43 comparaison_operateurs: SUP_EGAL .

    $défaut  réduction par utilisation de la règle 43 (comparaison_operateurs)


état 70

   44 comparaison_operateurs: INFERIEUR .

    $défaut  réduction par utilisation de la règle 44 (comparaison_operateurs)


état 71

   45 comparaison_operateurs: INF_EGAL .

    $défaut  réduction par utilisation de la règle 45 (comparaison_operateurs)


état 72

   29 arithmetique: arithmetique PLUS . arithmetique

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    PARENTHESE_OUVRANTE  décalage et aller à l'état 88

    variables     aller à l'état 49
    arithmetique  aller à l'état 89


état 73

   30 arithmetique: arithmetique MOINS . arithmetique

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    PARENTHESE_OUVRANTE  décalage et aller à l'état 88

    variables     aller à l'état 49
    arithmetique  aller à l'état 90


état 74

   31 arithmetique: arithmetique MUL . arithmetique

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    PARENTHESE_OUVRANTE  décalage et aller à l'état 88

    variables     aller à l'état 49
    arithmetique  aller à l'état 91


état 75

   32 arithmetique: arithmetique DIV . arithmetique

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    PARENTHESE_OUVRANTE  décalage et aller à l'état 88

    variables     aller à l'état 49
    arithmetique  aller à l'état 92


état 76

   39 comparaison: arithmetique comparaison_operateurs . arithmetique

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    PARENTHESE_OUVRANTE  décalage et aller à l'état 88

    variables     aller à l'état 49
    arithmetique  aller à l'état 93


état 77

   35 logique: logique ET_LOGIQUE . logique

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    NEGATION             décalage et aller à l'état 47
    PARENTHESE_OUVRANTE  décalage et aller à l'état 48

    variables     aller à l'état 49
    arithmetique  aller à l'état 50
    logique       aller à l'état 94
    comparaison   aller à l'état 52


état 78

   36 logique: logique OU_LOGIQUE . logique

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    NEGATION             décalage et aller à l'état 47
    PARENTHESE_OUVRANTE  décalage et aller à l'état 48

    variables     aller à l'état 49
    arithmetique  aller à l'état 50
    logique       aller à l'état 95
    comparaison   aller à l'état 52


état 79

   46 instSI: SI PARENTHESE_OUVRANTE logique PARENTHESE_FERMANTE . ALORS block SINON block
   47       | SI PARENTHESE_OUVRANTE logique PARENTHESE_FERMANTE . ALORS block

    ALORS  décalage et aller à l'état 96


état 80

   48 instTantQue: TANTQUE PARENTHESE_OUVRANTE logique PARENTHESE_FERMANTE . FAIRE block

    FAIRE  décalage et aller à l'état 97


état 81

   23 affectation: ID CROCHET_OUVRANT expression CROCHET_FERMANT . AFFECTATION expression

    AFFECTATION  décalage et aller à l'état 98


état 82

   49 affiche: AFFICHE PARENTHESE_OUVRANTE GUILLEMENT expression . GUILLEMENT PARENTHESE_FERMANTE
   50        | AFFICHE PARENTHESE_OUVRANTE GUILLEMENT expression . GUILLEMENT PLUS ID PARENTHESE_FERMANTE

    GUILLEMENT  décalage et aller à l'état 99


état 83

   51 lire: LIRE PARENTHESE_OUVRANTE variables PARENTHESE_FERMANTE .

    $défaut  réduction par utilisation de la règle 51 (lire)


état 84

    6 declaration: FIXE type DEUX_POINTS ID ASSIGNATION CST .

    $défaut  réduction par utilisation de la règle 6 (declaration)


état 85

    5 declaration: type DEUX_POINTS ID CROCHET_OUVRANT CST CROCHET_FERMANT .

    $défaut  réduction par utilisation de la règle 5 (declaration)


état 86

   33 arithmetique: PARENTHESE_OUVRANTE arithmetique PARENTHESE_FERMANTE .

    $défaut  réduction par utilisation de la règle 33 (arithmetique)


état 87

   38 logique: PARENTHESE_OUVRANTE logique PARENTHESE_FERMANTE .

    $défaut  réduction par utilisation de la règle 38 (logique)


état 88

   33 arithmetique: PARENTHESE_OUVRANTE . arithmetique PARENTHESE_FERMANTE

    ID                   décalage et aller à l'état 45
    CST                  décalage et aller à l'état 46
    PARENTHESE_OUVRANTE  décalage et aller à l'état 88

    variables     aller à l'état 49
    arithmetique  aller à l'état 100


état 89

   29 arithmetique: arithmetique . PLUS arithmetique
   29             | arithmetique PLUS arithmetique .
   30             | arithmetique . MOINS arithmetique
   31             | arithmetique . MUL arithmetique
   32             | arithmetique . DIV arithmetique

    MUL  décalage et aller à l'état 74
    DIV  décalage et aller à l'état 75

    $défaut  réduction par utilisation de la règle 29 (arithmetique)


état 90

   29 arithmetique: arithmetique . PLUS arithmetique
   30             | arithmetique . MOINS arithmetique
   30             | arithmetique MOINS arithmetique .
